# ghc-bug-sample

./: Main.hs  README.md  compile.sh  ghc-bug.cabal  stack.yaml
